(fix) changed animation for heroafterscroll subtitle, removed useless scrollbar component

--- a/src/components/Sections/Projects/projects.module.scss
+++ b/src/components/Sections/Projects/projects.module.scss
@@ -3,7 +3,7 @@
 .containerProjects {
   height: 100vh;
   width: 100%;
-  background: red;
+  background: #000;
 
   color: #fff;
 }
